Table artifacts {
  id integer [pk]
  slug text [not null, unique]
  title text [not null]
  summary text [not null]
  description text [null]
  from_year integer [not null]
  to_year integer [null]
}

Table artifact_versions {
  id integer [pk]
  artifact_id text [not null]
  version integer [not null]
  artifact integer [not null, unique, ref: - artifacts.id]
  created_at integer [not null]

  indexes {
    (artifact_id, version) [unique]
  }
}

Table artifact_aliases {
  id integer [pk]
  artifact integer [not null, ref: > artifacts.id]
  slug text [not null]

  indexes {
    (artifact, slug) [unique]
  }
}

Table links {
  id integer [pk]
  artifact integer [not null, ref: > artifacts.id]
  name text [not null]
  url text [not null]
}

Table files {
  id integer [pk]
  artifact integer [not null, ref: > artifacts.id]
  filename text [not null]
  name text [not null]
  media_type text [null]
  multihash text [not null]
  lang text [null]
  hidden bool [not null]

  indexes {
    (artifact, filename) [unique]
  }
}

Table file_aliases {
  id integer [pk]
  file integer [not null, ref: > files.id]
  filename text [not null]

  indexes {
    (file, filename) [unique]
  }
}

Table people {
  id integer [pk]
  artifact integer [not null, ref: > artifacts.id]
  name text [not null]

  indexes {
    (artifact, name) [unique]
  }
}

Table identities {
  id integer [pk]
  artifact integer [not null, ref: > artifacts.id]
  name text [not null]

  indexes {
    (artifact, name) [unique]
  }
}

Table decades {
  id integer [pk]
  artifact integer [not null, ref: > artifacts.id]
  decade integer [not null]

  indexes {
    (artifact, decade) [unique]
  }
}
